--- a/style.css
+++ b/style.css
@@ -20,8 +20,18 @@ a {
 a:hover {
     color:#0065FC;
 }
+a.active {
+    color:#0065FC;
+    border-top: 2px solid #0065FC;
+}
 article {
     box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 10%);
+}
+.blue {
+    color:#0065FC;
+}
+.grey {
+    color:#F2F2F2;
 }
 /* Header */
 
@@ -69,26 +79,28 @@ nav a:hover {
 }
 #formulaire li:not(:first-child) {
     margin: 10px;
+    border: 2px solid #F2F2F2;
+    border-radius: 30px;
+    border-left: none;
 }
 #formulaire li:first-child {
     margin: 20px 20px 20px 0;
 }
-#formulaire a > i {
+#formulaire li > i {
     color:#0065FC;
     background-color: #DEEBFF;
     padding: 14px;
     margin-right: 10px;
     border-radius: 50%;
+    text-align: center;
 }
 #formulaire li > a {
     padding: 10px 15px 10px 0;
-    border: 3px solid #F2F2F2;
-    border-radius: 20px;
     font-weight: bold;
 }
 #formulaire div {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     margin: 0;
 }
 #formulaire div p {
@@ -96,13 +108,13 @@ nav a:hover {
 }
 .info {
     color: #0065FC;
-    font-size: 12px;
-    border: 1px solid #F2F2F2;
+    border: 2px solid #F2F2F2;
     border-radius: 50%;
-    padding: 8px;
-    width: 10px;
-    height: 10px;
+    height: 20px;
+    width: 20px;
+    padding: 5px 3px 1px 3px;
     text-align: center;
+    font-family: 'Rokkitt', 'serif';
 }
 
 /* Main */
@@ -155,9 +167,6 @@ main section {
     margin-top: 0px;
     margin-bottom: 30px;
 }
-#populaire article div:last-child i {
-    color:#0065FC;
-}
 
 /* Section Hébergements */
 
@@ -196,9 +205,6 @@ main section {
 }
 .description p {
     font-size: 12px;
-}
-.description i {
-    color: #0065FC;
 }
 
 /* Section Activités */
