--- a/style.css
+++ b/style.css
@@ -2,12 +2,10 @@
 
 body {
     font-family: 'Raleway', sans-serif;
-    display: flex;
-    justify-content: center;
+    margin: 0;
 }
 #container {
-    width: 100%;
-    max-width: 1200px;
+    margin: 0 50px 50px 50px;
 }
 ul {
     list-style-type: none;
@@ -20,7 +18,7 @@ a {
 a:hover {
     color:#0065FC;
 }
-a.active {
+.active {
     color:#0065FC;
     border-top: 2px solid #0065FC;
 }
@@ -29,91 +27,126 @@ article {
 }
 .blue {
     color:#0065FC;
+    font-size: 80%;
 }
 .grey {
-    color:#F2F2F2;
+    color:#d9d9d9;
+    font-size: 80%;
+}
+.nospace {
+    word-spacing: -3px;
 }
 /* Header */
 
+header {
+    padding-top: 26px;
+}
 nav {
     display: flex;
     justify-content: space-between;
 }
 nav img {
-    height: 40px;
+    margin: 15px;
+    width: 96px;
 }
 nav ul {
     display: flex;
 }
 nav a {
-    padding: 10px 15px;
+    padding: 40px 25px;
 }
 nav a:hover {
     border-top: 2px solid #0065FC;
 }
 
 /* Section Formulaire */
-
-#formulaire li > a:hover {
-    color:#0065FC;
+#formulaire {
+    margin-bottom: 30px;
 }
-#formulaire form i,input,button {
-    padding: 14px;
-    border: 0;
+#formulaire h2 {
+    margin-bottom: 10px;
+}
+#formulaire > p {
+    margin-top: 10px;
+} 
+#formulaire form {
+    display: flex;
+    height: 50px;
+    margin-bottom: 30px;
+}
+#formulaire form input,button {
+    font-family: 'Raleway';
     font-weight: bold;
+    font-size: 16px;
 }
 #formulaire form i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
     background-color:#F2F2F2;
+    font-size: 120%;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
 }
+#formulaire input {
+    width: 230px;
+    border: 1px solid #F2F2F2;
+    border-right: none;
+    padding: 0 0 0 15px;
+}
 #formulaire form button {
+    width: 130px;
     color: white;
     background-color: #0065FC;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-}
-#formulaire ul {
-    display: flex;
-    align-items: center;
-}
-#formulaire li:not(:first-child) {
-    margin: 10px;
-    border: 2px solid #F2F2F2;
-    border-radius: 30px;
-    border-left: none;
-}
-#formulaire li:first-child {
-    margin: 20px 20px 20px 0;
-}
-#formulaire li > i {
-    color:#0065FC;
-    background-color: #DEEBFF;
-    padding: 14px;
-    margin-right: 10px;
-    border-radius: 50%;
-    text-align: center;
-}
-#formulaire li > a {
-    padding: 10px 15px 10px 0;
-    font-weight: bold;
+    border: 0;
 }
 #formulaire div {
     display: flex;
-    align-items: baseline;
-    margin: 0;
+    align-items: center;
+}
+#filtres {
+    margin-bottom: 30px;
+}
+#filtres div {
+    margin: 0 25px 0 0;
+}
+#formulaire a > i {
+    display: flex;
+    justify-content: center;
+    color:#0065FC;
+    font-size: 125%;
+    width: 50px;
+    height: 50px;
+    background-color: #DEEBFF;
+    border-radius: 50%;
+    align-items: center;
+    margin-right: 12px;
+}
+#formulaire div > a {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    height: 46px;
+    border: 2px solid #d9d9d9;
+    border-radius: 25px;
+    border-left: none;
+    padding-right: 20px;
 }
 #formulaire div p {
     padding-left: 10px;
 }
 .info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #0065FC;
-    border: 2px solid #F2F2F2;
+    border: 1px solid #d9d9d9;
     border-radius: 50%;
     height: 20px;
     width: 20px;
-    padding: 5px 3px 1px 3px;
-    text-align: center;
     font-family: 'Rokkitt', 'serif';
 }
 
@@ -124,63 +157,82 @@ main {
 }
 main section {
     background-color: #F2F2F2;
-    border-radius: 10px;
-    padding: 40px;
+    border-radius: 20px;
 }
-
+main h2 {
+    margin-top: 0;
+}
+main h3 {
+    font-size: 18px;
+}
 /* Section populaire */
 
 #populaire {
     display: flex;
     flex-direction: column;
+    padding: 40px;
+    margin-left: 40px;
+    flex: 1;
 }
-#populaire h3 {
-    margin-bottom: 40px;
+#populaire > div:first-child {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+.fa-chart-line {
+    font-size: 150%;
 }
 #populaire article {
-    width: 290px;
-    height: 120px;
+    min-width: 274px;
+    height: 144px;
     margin-bottom: 30px;
     background-color: white;
     border-radius: 20px;
-    padding: 5px 5px;
+    padding: 5px;
     display: flex;
 }
-#populaire article div:first-child {
-    max-width: 40%;
-    border-radius: 20px 0 0 20px;
+#populaire a:last-child article {
+    margin-bottom: 0;
+}
+.photos_populaire {
+    width: 40%;
+    min-width: 40%;
+    border-radius: 12px 0 0 12px;
     overflow: hidden;
-    display: flex;
+
 }
 #populaire img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
-#populaire article div:last-child {
-    margin: 0 20px 0 10px;
+.desc_populaire {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px;
 }
-#populaire article div:last-child h5 {
-    margin: 10px 0;
+#populaire h3 {
+    margin: 0;
 }
-#populaire article div:last-child p {
-    font-size: 12px;
-    margin-top: 0px;
-    margin-bottom: 30px;
+#populaire p {
+    margin: 0;
+    padding-top: 8px;
 }
-
 /* Section Hébergements */
 
 #hebergements {
-    margin-right: 20px;
+    padding: 40px;
+    flex: 2;
 }
 
 #hebergements div article {
-    width: 200px;
-    height: 170px;
-    padding: 5px 5px;
-    margin: 20px 20px 20px 0px;
+    min-width: 180px;
+    width: 30%;
+    padding: 5px;
+    margin-bottom: 30px;
     background-color: white;
-    border-radius: 10%;
+    border-radius: 15px;
 }
 #hebergements p:last-child {
     font-weight: bold;
@@ -189,28 +241,31 @@ main section {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding-bottom: 20px;
 }
 .photo {
-    height: 60%;
+    height: 114px;
     overflow: hidden;
-    display: flex;
-    align-items: center;
-    border-radius: 10% 10% 0px 0px;
+    border-radius: 15px 15px 0px 0px;
 }
 .photo img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-.description h5, .description p {
-    margin: 5px;
+.description h3, .description p, .description div {
+    margin: 8px;
 }
-.description p {
-    font-size: 12px;
+#hebergements > a {
+    font-size: 120%;
+    font-weight: bold;
 }
+
 
 /* Section Activités */
 
 #activites {
-    margin: 20px 0;
+    margin: 50px 0;
     display: flex;
     flex-direction: column;
 }
@@ -218,7 +273,7 @@ main section {
     display: flex;
 }
 #activites > div {
-    max-height: 450px;
+    max-height: 485px;
     justify-content: space-between;
 }
 #activites div > div {
@@ -232,7 +287,7 @@ main section {
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin: 10px 0;
+    margin: 20px 0;
     border-radius: 20px;
     overflow: hidden;
 }
@@ -264,6 +319,7 @@ main section {
 }
 #activites p {
     font-weight: bold;
+    font-size: 19px;
     padding-left: 15px;
 }
 
@@ -272,7 +328,7 @@ main section {
 footer {
     background-color: #F2F2F2;
     display: flex;
-    padding: 30px;
+    padding: 40px 50px 50px 50px;
 }
 footer div {
     margin-right: auto;
