--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a {
 a:hover {
     color:#0065FC;
 }
-article {
+article, figure {
     box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 10%);
 }
 .blue {
@@ -145,16 +145,17 @@ nav a:hover {
 }
 #formulaire div {
     display: flex;
-    align-items: center;
+    align-items: baseline;
 }
 #filtres {
     margin-bottom: 30px;
 }
-#filtres > div:first-child {
-    font-size: 21px;
+#filtres h3 {
+    margin-right: 25px;
 }
-#filtres div {
-    margin: 0 25px 0 0;
+#filtres > div {
+    flex-wrap: wrap;
+    gap: 25px;
 }
 #formulaire a > i {
     display: flex;
@@ -206,11 +207,10 @@ nav a:hover {
     #filtres {
         flex-wrap: wrap;
     }
-    #filtres > div:first-child {
+    #filtres > h3 {
         margin-bottom: 15px;
     }
-    #filtres > div:last-child {
-        flex-wrap: wrap;
+    #filtres > div {
         gap: 13px;
     }
 }
@@ -376,7 +376,7 @@ main h3 {
 #activites div > div:last-child {
     margin-right: 0;
 }
-#activites article {
+#activites figure {
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -402,7 +402,7 @@ main h3 {
 .longchamp {
     flex: 10;
 }
-#activites article > img {
+#activites figure > img {
     flex: 5;
     overflow: hidden;
 }
@@ -410,7 +410,8 @@ main h3 {
     width: 100%;
     object-fit: cover;
 }
-#activites p {
+#activites figcaption {
+    margin: 20px 0;
     font-weight: bold;
     font-size: 19px;
     padding-left: 15px;
@@ -427,7 +428,7 @@ main h3 {
     #activites div > div {
         margin-right: 0;
     }
-    #activites article {
+    #activites figure {
         margin: 0;
         max-height: 190px;
         margin-bottom: 20px;
