--- a/style.css
+++ b/style.css
@@ -4,15 +4,6 @@ body {
     font-family: 'Raleway', sans-serif;
     margin: 0;
 }
-#container {
-    margin: 0 50px 50px 50px;
-}
-@media screen and (max-width: 768px)
-{
-    #container {
-        margin: 0;
-    }
-}
 ul {
     list-style-type: none;
     padding-left: 0;
@@ -40,6 +31,7 @@ article, figure {
 }
 /* Header */
 header {
+    margin: 0 50px;
     padding-top: 26px;
 }
 nav {
@@ -65,6 +57,9 @@ nav a:hover {
 }
 @media screen and (max-width: 768px)
 {
+    header {
+        margin: 0;
+    }
     nav {
        flex-direction: column;
        align-items: center; 
@@ -101,7 +96,7 @@ nav a:hover {
 }
 /* Section Formulaire */
 #formulaire {
-    margin-bottom: 30px;
+    margin: 0 50px 30px 50px;
 }
 #formulaire h2 {
     margin-bottom: 10px;
@@ -250,6 +245,7 @@ nav a:hover {
 
 main {
     display: flex;
+    margin: 0 50px;
 }
 main section {
     background-color: #F2F2F2;
@@ -264,6 +260,7 @@ main h3 {
 @media screen and (max-width: 768px)
 {
     main {
+        margin: 0;
         flex-direction: column;
     }
 }
@@ -393,7 +390,7 @@ main h3 {
 /* Section Activités */
 
 #activites {
-    margin: 50px 0;
+    margin: 50px;
     display: flex;
     flex-direction: column;
 }
