--- a/style.css
+++ b/style.css
@@ -94,6 +94,12 @@ nav a:hover {
         border-bottom: 3px solid #F2F2F2;
     }
 }
+@media screen and (min-width: 768px) and (max-width: 991px)
+{
+    header {
+        margin: 0 25px;
+    }
+}
 /* Section Formulaire */
 #formulaire {
     margin: 0 50px 30px 50px;
@@ -242,7 +248,12 @@ nav a:hover {
 }
 @media screen and (min-width: 768px) and (max-width: 991px)
 {
-
+    #formulaire {
+        margin: 0 25px 30px 25px;
+    }
+    #filtres {
+        flex-direction: column;
+    }
 }
 /* Main */
 
@@ -265,6 +276,13 @@ main h3 {
     main {
         margin: 0;
         flex-direction: column;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 991px)
+{
+    main {
+        flex-direction: column;
+        margin: 0 25px;
     }
 }
 /* Section populaire */
@@ -336,6 +354,24 @@ main h3 {
         height: 155px;
     }
 }
+@media screen and (min-width: 768px) and (max-width: 991px)
+{
+    #populaire {
+        order: 1;
+        margin: 0 0 20px;
+    }
+    #populaire > div:last-child {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+    }
+    #populaire article {
+        min-width: auto;
+        max-width: 250px;
+        height: 180px;    
+        margin-bottom: 0;
+    }
+}
 /* Section Hébergements */
 
 #hebergements {
@@ -386,6 +422,15 @@ main h3 {
     #hebergements div article {
         width: 100%;
     }
+    .galeries {
+        padding-bottom: 0;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 991px)
+{
+    #hebergements {
+        order: 2;
+        }
     .galeries {
         padding-bottom: 0;
     }
@@ -474,7 +519,15 @@ main h3 {
         margin-bottom: 20px;
     }
 }
-
+@media screen and (min-width: 768px) and (max-width: 991px)
+{
+    #activites {
+        margin: 25px;
+    }
+    #activites div > div {
+        margin-right: 20px;
+    }
+}
 /* Footer */
 
 @media screen and (max-width: 767px)
@@ -500,3 +553,8 @@ footer li {
     margin-bottom: 10px;
     font-size: 18px;
 }
+@media screen and (min-width: 768px) and (max-width: 991px)
+{
+    footer {
+        padding: 20px 25px 50px 25px;
+    }
