fix: errors msames ids

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* Général */
+/* General */
 
 body {
     font-family: 'Raleway', sans-serif;
@@ -260,6 +260,7 @@ nav a:hover {
         flex-direction: column;
     }
 }
+
 /* Main */
 
 main {
@@ -290,6 +291,7 @@ main h3 {
         margin: 0 25px;
     }
 }
+
 /* Section topLodging */
 
 #topLodging {
@@ -319,7 +321,7 @@ main h3 {
 #topLodging a:last-child article {
     margin-bottom: 0;
 }
-#photoTopLogding {
+.photoTopLogding {
     width: 40%;
     min-width: 40%;
     border-radius: 12px 0 0 12px;
@@ -331,7 +333,7 @@ main h3 {
     height: 100%;
     object-fit: cover;
 }
-#descTopLodging {
+.descTopLodging {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -377,7 +379,8 @@ main h3 {
         margin-bottom: 0;
     }
 }
-/* Section lodging */
+
+/* Section Lodging */
 
 #lodging {
     padding: 40px;
@@ -400,17 +403,17 @@ main h3 {
     justify-content: space-between;
     padding-bottom: 20px;
 }
-#photoLodging {
+.photoLodging {
     height: 114px;
     overflow: hidden;
     border-radius: 15px 15px 0px 0px;
 }
-#photoLodging img {
+.photoLodging img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-#descLodging h3, #descLodging p, #descLodging div {
+.descLodging h3, .descLodging p, .descLodging div {
     margin: 8px;
 }
 #lodging > a {
@@ -440,6 +443,7 @@ main h3 {
         padding-bottom: 0;
     }
 }
+
 /* Section Activity */
 
 #activity {
