fix: adjust marge

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,7 +445,7 @@ main h3 {
 /* Section Activity */
 
 #activity {
-    margin: 50px;
+    margin: 50px 50px 40px;
 }
 #activity h2 {
     margin: 0;
