fix: change max-height article

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,7 +387,7 @@ main h3 {
     background-color: white;
     min-width: 180px;
     width: 30%;
-    height: 200px;
+    min-height: 200px;
     margin-bottom: 30px;
     border: 5px solid white;
     border-radius: 15px;
