--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,7 +316,7 @@ main h3 {
     margin-bottom: 30px;
     background-color: white;
     border-radius: 20px;
-    border: 5px solid white;
+    border: 5px;
     overflow: hidden;
     display: flex;
 }
@@ -389,7 +389,7 @@ main h3 {
     width: 30%;
     min-height: 200px;
     margin-bottom: 30px;
-    border: 5px solid white;
+    border: 5px;
     border-radius: 15px;
     overflow: hidden;
 }
