--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,7 @@ main h3 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 15px 30px 10px 20px;
+    padding: 15px 25px 10px 20px;
 }
 #topLodging h4 {
     margin: 0;
@@ -370,7 +370,7 @@ main h3 {
         gap: 20px;
     }
     #topLodging article {
-        min-width: auto;
+        min-width: initial;
         max-width: 250px;
         height: 180px;    
         margin-bottom: 0;
@@ -385,7 +385,6 @@ main h3 {
 }
 #lodging article {
     background-color: white;
-    min-width: 180px;
     width: 30%;
     min-height: 200px;
     margin-bottom: 30px;
@@ -499,7 +498,7 @@ main h3 {
     margin: 20px 0;
     font-weight: bold;
     font-size: 17px;
-    padding-left: 15px;
+    padding: 0 15px;
 }
 @media screen and (max-width: 767px)
 {
@@ -571,5 +570,9 @@ footer li:last-child {
 {
     footer {
         padding: 20px 25px 50px 25px;
+    }
+    footer section {
+        width: initial;
+        margin-right: auto;
     }
 }
